fix for backtotop on mobile

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -366,6 +366,13 @@ p.link-more{display: none;}
 #section-footer{order:4;}
 .mobmenu{display: block; color:#fff;}
 
+.headroom--unpinned .back-to-top{
+bottom:30px; padding:.3rem .3rem 0 .3rem;
+font-size:240%;
+border-radius: 8px 0 0 8px;
+}
+
+
 .mainmenu{text-align: center;}
 .mainmenu span{font-size:80%;}
 #site-header{z-index:1; top:0; align-items: center; }
